--- a/translations/translation_en.xml
+++ b/translations/translation_en.xml
@@ -2,9 +2,9 @@
 <l10n>
 	<translationContributors/>
 	<texts>
-		<text name = "mm_setting_title" 		text = "More Manure - Settings"/>
-		<text name = "mm_Multiplier_short" 		text = "Manure Multiplier"/>
-		<text name = "mm_Multiplier_long" 		text = "Select your multiplier number, higher number gets more manure per game hour."/>
-		<text name = "mm_blink_warn"			text = "Warning: Manure production from animals multiplier has been updated."/>
+		<text name = "mma_setting_title" 		text = "More Manure - Settings"/>
+		<text name = "mma_Multiplier_short" 		text = "Manure Multiplier"/>
+		<text name = "mma_Multiplier_long" 		text = "Select your multiplier number, higher number gets more manure per game hour."/>
+		<text name = "mma_blink_warn"			text = "Warning: The manure production multiplier from animals has been updated."/>
 	</texts>
 </l10n>
