--- a/translations/translation_en.xml
+++ b/translations/translation_en.xml
@@ -3,7 +3,7 @@
 	<translationContributors/>
 	<texts>
 		<text name = "mma_setting_title" 		text = "More Manure - Settings"/>
-		<text name = "mma_Multiplier_short" 		text = "Manure Multiplier"/>
+		<text name = "mma_Multiplier_short" 		text = "Manure Produce Multiplier"/>
 		<text name = "mma_Multiplier_long" 		text = "Select your multiplier number, higher number gets more manure per game hour."/>
 		<text name = "mma_blink_warn"			text = "Warning: The manure production multiplier from animals has been updated."/>
 	</texts>
